# AstraLink

./: .gitignore  AstraLink_Protocol_Design.txt  Cargo.toml  README.md
config/: client.example.json  server.example.json
crates/astralink-client/: Cargo.toml
crates/astralink-client/src/: main.rs
crates/astralink-core/: Cargo.toml
crates/astralink-core/src/: lib.rs
crates/astralink-panel/: Cargo.toml
crates/astralink-panel/src/: main.rs
crates/astralink-server/: Cargo.toml
crates/astralink-server/src/: main.rs
scripts/: deploy.sh  install.sh
