[package]
name = "astralink-panel"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
http = "1"
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
uuid = { version = "1", features = ["v5"] }

