[package]
name = "astralink-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1"
astralink-core = { path = "../astralink-core" }
clap = { version = "4", features = ["derive"] }
quinn = "0.11"
rand = "0.8"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
